[package]
name = "ProjectAlpha"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0", features = ["bevy_dev_tools", "dynamic_linking"] }
bevy-inspector-egui = "0.28.1"
